<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (c) 2011 The WebRTC project authors. All Rights Reserved. -->
<!--  -->
<!-- Use of this source code is governed by a BSD-style license -->
<!-- that can be found in the LICENSE file in the root of the source -->
<!-- tree. An additional intellectual property rights grant can be found -->
<!-- in the file PATENTS.  All contributing project authors may -->
<!-- be found in the AUTHORS file in the root of the source tree. -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/status_view"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/init_btn"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/init_client" >
    </Button>

    <Button
        android:id="@+id/release_btn"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/release_client" >
    </Button>

    <Button
        android:id="@+id/login_btn"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/login" >
    </Button>

    <Button
        android:id="@+id/logout_btn"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/logout" >
    </Button>

    <Button
        android:id="@+id/place_call_btn"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/place_call" >
    </Button>

    <Button
        android:id="@+id/hang_up_btn"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/hang_up" >
    </Button>

</LinearLayout>